fixed major bug in graphStorage.trimToSize when it has multiple segments