@@ -66,13 +66,12 @@
         
     <build>
         <plugins>
-            <plugin>
-                <!-- MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m" NOT USED by forked jvm!!  -->
+            <plugin>                
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.12.4</version>
                 <configuration>
-                    <argLine>-Xmx120m -Xms120m</argLine>
+                    <argLine>-Xmx100m -Xms100m</argLine>
                 </configuration>
             </plugin>
             <plugin>
